--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -3,8 +3,7 @@
 {% block content %}
   <h2>Welcome{% if user.is_authenticated %}, {{ user.username }}{% endif %}!</h2>
   {% if user.is_authenticated %}
-    <p>You are logged in.</p>
-    <a href="{% url 'logout' %}">Log out</a>
+    {% include 'users/hello_world.html' %}
   {% else %}
     <p>You are not logged in.</p>
     <a href="{% url 'login' %}">Log in</a> or <a href="{% url 'signup' %}">Sign up</a>
