--- a/templates/base.html
+++ b/templates/base.html
@@ -8,5 +8,6 @@
         {% block content %}
         {% endblock %}
     </main>
+    <a href="{% url 'unfinished_tickets' %}">Unfinished Tickets</a>
 </body>
 </html>
